--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+    <link rel="stylesheet" href="css/style.css">
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 		<!-- Bootstrap core CSS -->
@@ -14,13 +15,21 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 		<!-- MDB core JavaScript -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
+    
+    <script type="text/javascript" src="js/functions.js">
+      
+    </script>
 	</head>
-	<body>
+	
+  <body class="bodywrapper" >
 		<!--Main Navigation-->
-<header>
+  <header>
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark yellow accent-4 scrolling-navbar">
-    <a class="navbar-brand text-dark" href="#"><strong>Navbar</strong></a>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark  primary-color scrolling-navbar">
+    <a class="navbar-brand text-white" href="#"><strong>Navbar</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,16 +37,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Features</a>
+          <a class="nav-link text-white" id="dropdownMenu1" href="#">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Pricing</a>
+          <a class="nav-link text-white" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Opinions</a>
+          <a class="nav-link text-white" href="#">Opinions</a>
         </li>
       </ul>
       <ul class="navbar-nav nav-flex-icons">
@@ -56,5 +65,481 @@
 
 </header>
 <!--Main Navigation-->
+<main class="sitecontent">
+<!-- Search -->
+
+
+<br>
+
+<h2 class="primary-heading">Hello, World!</h2>
+  This is a starter template with bootstrap material design. Its not the prettiest but will help to get you going.
+<hr class="my-4">
+<!-- h -->
+
+<div class="jumbotron">
+  <center>
+  <h2 class="display-4">Hello, world!</h2>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</center>
+</div>
+
+<h2 class="primary-heading">Cards</h2><br>
+
+
+<!-- Card deck -->
+<div class="card-deck">
+
+  <!-- Card -->
+  <div class="card mb-4">
+
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg" alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+
+      <!--Title-->
+      <h4 class="card-title">Card title</h4>
+      <!--Text-->
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+
+    </div>
+
+  </div>
+  <!-- Card -->
+
+  <!-- Card -->
+  <div class="card mb-4">
+
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/14.jpg" alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+
+      <!--Title-->
+      <h4 class="card-title">Card title</h4>
+      <!--Text-->
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+
+    </div>
+
+  </div>
+  <!-- Card -->
+
+  <!-- Card -->
+  <div class="card mb-4">
+
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/15.jpg" alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+    <!--Card content-->
+    <div class="card-body">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+    </div>
+  </div>
+  <!-- Card -->
+</div>
+<!-- Card deck -->
+
+<h2 class="primary-heading">Card Headers</h2><br>
+
+
+<div class="card">
+  <h5 class="card-header h5">Featured</h5>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#!" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<br>
+<div class="row">
+  <div class="col-sm-6 mb-3 mb-md-0">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#!" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+<br>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#!" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<h2 class="primary-heading">Forms</h2><br>
+
+
+<!-- Extended default form grid -->
+<form>
+  <!-- Grid row -->
+  <div class="form-row">
+    <!-- Default input -->
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Email</label>
+      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+    </div>
+    <!-- Default input -->
+    <div class="form-group col-md-6">
+      <label for="inputPassword4">Password</label>
+      <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+    </div>
+  </div>
+  <!-- Grid row -->
+
+  <!-- Default input -->
+  <div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  <!-- Default input -->
+  <div class="form-group">
+    <label for="inputAddress2">Address 2</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  </div>
+  <!-- Grid row -->
+  <div class="form-row">
+    <!-- Default input -->
+    <div class="form-group col-md-6">
+      <label for="inputCity">City</label>
+      <input type="text" class="form-control" id="inputCity" placeholder="New York City">
+    </div>
+    <!-- Default input -->
+    <div class="form-group col-md-6">
+      <label for="inputZip">Zip</label>
+      <input type="text" class="form-control" id="inputZip" placeholder="11206-1117">
+    </div>
+  </div>
+  <!-- Grid row -->
+  <button type="submit" class="btn btn-primary btn-md">Sign in</button>
+</form>
+<!-- Extended default form grid -->
+<br>
+<h2 class="primary-heading">Tables</h2><br>
+
+<table class="table">
+  <thead class="black white-text">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+<table class="table">
+  <thead class="grey lighten-2">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>
+
+<h2 class="primary-heading">Data Tables</h2><br>
+
+<table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+  <thead>
+    <tr>
+      <th class="th-sm">Name
+      </th>
+      <th class="th-sm">Position
+      </th>
+      <th class="th-sm">Office
+      </th>
+      <th class="th-sm">Age
+      </th>
+      <th class="th-sm">Start date
+      </th>
+      <th class="th-sm">Salary
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Tiger Nixon</td>
+      <td>System Architect</td>
+      <td>Edinburgh</td>
+      <td>61</td>
+      <td>2011/04/25</td>
+      <td>$320,800</td>
+    </tr>
+    <tr>
+      <td>Garrett Winters</td>
+      <td>Accountant</td>
+      <td>Tokyo</td>
+      <td>63</td>
+      <td>2011/07/25</td>
+      <td>$170,750</td>
+    </tr>
+    <tr>
+      <td>Ashton Cox</td>
+      <td>Junior Technical Author</td>
+      <td>San Francisco</td>
+      <td>66</td>
+      <td>2009/01/12</td>
+      <td>$86,000</td>
+    </tr>
+    <tr>
+      <td>Cedric Kelly</td>
+      <td>Senior Javascript Developer</td>
+      <td>Edinburgh</td>
+      <td>22</td>
+      <td>2012/03/29</td>
+      <td>$433,060</td>
+    </tr>
+    <tr>
+      <td>Airi Satou</td>
+      <td>Accountant</td>
+      <td>Tokyo</td>
+      <td>33</td>
+      <td>2008/11/28</td>
+      <td>$162,700</td>
+    </tr>
+    <tr>
+      <td>Brielle Williamson</td>
+      <td>Integration Specialist</td>
+      <td>New York</td>
+      <td>61</td>
+      <td>2012/12/02</td>
+      <td>$372,000</td>
+    </tr>
+    <tr>
+      <td>Herrod Chandler</td>
+      <td>Sales Assistant</td>
+      <td>San Francisco</td>
+      <td>59</td>
+      <td>2012/08/06</td>
+      <td>$137,500</td>
+    </tr>
+    <tr>
+      <td>Rhona Davidson</td>
+      <td>Integration Specialist</td>
+      <td>Tokyo</td>
+      <td>55</td>
+      <td>2010/10/14</td>
+      <td>$327,900</td>
+    </tr>
+    <tr>
+      <td>Colleen Hurst</td>
+      <td>Javascript Developer</td>
+      <td>San Francisco</td>
+      <td>39</td>
+      <td>2009/09/15</td>
+      <td>$205,500</td>
+    </tr>
+    <tr>
+      <td>Sonya Frost</td>
+      <td>Software Engineer</td>
+      <td>Edinburgh</td>
+      <td>23</td>
+      <td>2008/12/13</td>
+      <td>$103,600</td>
+    </tr>
+    <tr>
+      <td>Jena Gaines</td>
+      <td>Office Manager</td>
+      <td>London</td>
+      <td>30</td>
+      <td>2008/12/19</td>
+      <td>$90,560</td>
+    </tr>
+    <tr>
+      <td>Quinn Flynn</td>
+      <td>Support Lead</td>
+      <td>Edinburgh</td>
+      <td>22</td>
+      <td>2013/03/03</td>
+      <td>$342,000</td>
+    </tr>
+    <tr>
+      <td>Charde Marshall</td>
+      <td>Regional Director</td>
+      <td>San Francisco</td>
+      <td>36</td>
+      <td>2008/10/16</td>
+      <td>$470,600</td>
+    </tr>
+    <tr>
+      <td>Haley Kennedy</td>
+      <td>Senior Marketing Designer</td>
+      <td>London</td>
+      <td>43</td>
+      <td>2012/12/18</td>
+      <td>$313,500</td>
+    </tr>
+    <tr>
+      <td>Tatyana Fitzpatrick</td>
+      <td>Regional Director</td>
+      <td>London</td>
+      <td>19</td>
+      <td>2010/03/17</td>
+      <td>$385,750</td>
+    </tr>
+    <tr>
+      <td>Michael Silva</td>
+      <td>Marketing Designer</td>
+      <td>London</td>
+      <td>66</td>
+      <td>2012/11/27</td>
+      <td>$198,500</td>
+    </tr>
+    <tr>
+      <td>Paul Byrd</td>
+      <td>Chief Financial Officer (CFO)</td>
+      <td>New York</td>
+      <td>64</td>
+      <td>2010/06/09</td>
+      <td>$725,000</td>
+    </tr>
+    <tr>
+      <td>Gloria Little</td>
+      <td>Systems Administrator</td>
+      <td>New York</td>
+      <td>59</td>
+      <td>2009/04/10</td>
+      <td>$237,500</td>
+    </tr>
+    <tr>
+      <td>Bradley Greer</td>
+      <td>Software Engineer</td>
+      <td>London</td>
+      <td>41</td>
+      <td>2012/10/13</td>
+      <td>$132,000</td>
+    </tr>
+    <tr>
+      <td>Dai Rios</td>
+      <td>Personnel Lead</td>
+      <td>Edinburgh</td>
+      <td>35</td>
+      <td>2012/09/26</td>
+      <td>$217,500</td>
+    </tr>
+    <tr>
+      <td>Jenette Caldwell</td>
+      <td>Development Lead</td>
+      <td>New York</td>
+      <td>30</td>
+      <td>2011/09/03</td>
+      <td>$345,000</td>
+    </tr>
+    <tr>
+      <td>Yuri Berry</td>
+      <td>Chief Marketing Officer (CMO)</td>
+      <td>New York</td>
+      <td>40</td>
+      <td>2009/06/25</td>
+      <td>$675,000</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>Name
+      </th>
+      <th>Position
+      </th>
+      <th>Office
+      </th>
+      <th>Age
+      </th>
+      <th>Start date
+      </th>
+      <th>Salary
+      </th>
+    </tr>
+  </tfoot>
+</table>
+
+    </main>
+
+
+    <!--Footer-->
+  <footer class="page-footer font-small">
+      <div class="container-fluid">
+      </div>
+      <div class="footer-copyright py-3 text-center footer-text">
+          Bootstrap Demo with Material Design 
+          <a class="footer-text" href="https://github.com/ruanbekker">GitHub</a>
+      </div>
+  </footer>
+  <!--Footer-->
 	</body>
 </html>
